# qecsurface

./: .ondirrc  Makefile  README.md  env.sh  flake.nix
md/: Makefile  report.ipynb  report.md
python/: pyproject.toml
python/qecsurface/: __init__.py  pennylane.py  qeccs.py  sympy.py  type.py
python/qecsurface_tests/: __init__.py  test_pennylane.py  test_sympy.py
sh/: sedlines.sh
tex/: Makefile  aitalks.tex  preamble.tex  references.bib  report.tex  template.tex
tex/ai/: check_matrix.tex  quantum_error_correction_conditions.tex  theory.tex
